--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon dist/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.4",
     "morgan": "^1.10.0"
